tests/frontend-http-versions/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: req057
  labels:
    kubernetes.io/metadata.name: req057
