tests/frontend-http-versions/secret-apikey.yaml
apiVersion: v1
kind: Secret
metadata:
  name: banking-api-apikey
  namespace: kuadrant-system
  labels:
    authorino.kuadrant.io/managed-by: authorino
    app: banking-api-apikey
type: Opaque
stringData:
  api_key: "redhat"
